Decode working